# publictransportapi

./: .gitignore  Dockerfile  README.md  database.db  docker-compose.yaml  entrypoint.sh  main.py  pyproject.toml
publictransportapi/: __init__.py  app.py  domain.py
publictransportapi/services/source_extractor/: salvador_integra.py
publictransportapi/source_extractor/: br_ba_salvador_integra.py  cli.py  extractor.py  salvador_ba_integra.py
salvadorintegra/: __init__.py
salvadorintegra/domain/: sources.py
salvadorintegra/services/: __init__.py  source_extractor.py
salvadorintegra/services/source_extractor/: salvador_integra.py
tests/: conftest.py  domain_test.py
tests/source_extractor/: br_ba_salvador_integra_test.py  extractor_test.py  salvador_ba_integra_test.py
