[tool.poetry]
name = "public-transport-api"
version = "0.1.0"
description = "API não-oficial de rotas de ônibus do sistema Integra do Município de Salvador"
authors = ["Victor Raton <43411882+victorfernandesraton@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pdfplumber = "^0.11.0"
httpx = "^0.27.0"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
gunicorn = "^22.0.0"
sqlalchemy = "^2.0.31"
psycopg2-binary = "^2.9.9"
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
python-decouple = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
mypy = "^1.10.0"
taskipy = "^1.13.0"
ruff = "^0.5.2"
viztracer = "^0.16.3"
snakeviz = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
# Enable the isort rules.
preview = true
extend-select = ["I", "F", "PT"]

[tool.ruff]
# Enable the isort rules.
extend-exclude = ["salvadorintegra/migrations"]

[tool.taskipy.tasks]
run = { cmd = "uvicorn publictransportapi.app:app --reload", help = "Run the API server" }
lint = { cmd = "ruff check . && ruff check --diff", help = "Run the linter" }
format = {cmd= "ruff check . --fix && ruff format .", help = "Run the formatter"}
test = {cmd= "pytest .", help = "Run the tests"}
extract = {cmd="python -m publictransportapi.source_extractor.cli", help="Extract data from source"}
